--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ section {
 	width:100%;
 	background: #cc3433;
 	margin: 30px;
+	overflow: hidden;
 }
 
 /* This is a media querry that you always want to add to make your pages responsive. This has to be written exactly like it's shown here. */
